# environmental_robot

./: .gitignore  .gitmodules  LICENSE  README.md  setup.md
arm_control/: CMakeLists.txt  package.xml
arm_control/config/: anakin_params.yaml
arm_control/scripts/: .controller.py.swo  arm_cmd_interface.py  arm_control.py  arm_control_new.py  arm_fbk_interface.py  arm_node.py  arm_test.ipynb  arm_test_mstop.ipynb  arm_touchdown.py  command_node.py  command_node_python_api.py  controller.py  force_fbk.py  lipo_jrk_interface.py  new.ipynb  silly_walk.py  tool_arm_control.py
autonomy_manager/: CMakeLists.txt  README.md  package.xml
autonomy_manager/config/: .hebi_microstrain.yaml.swp  constants.yaml  hebi_microstrain.yaml
autonomy_manager/deprecated/: controls.launch  curve_graph.py  dataParser.py  dummy_services.py  test.py  test_adaptive.py
autonomy_manager/launch/: .controls.launch.swp  arm_camera.launch  autonomy.launch  basic.launch  bringup.launch  controls.launch  gps.launch  (+7 more)
camera/: package.xml  pan_tilt_ctrl.py
env_utils/: CMakeLists.txt  package.xml  setup.py
environmental_robots/: README.md  arm_return.py  touchdown.py
gps_gui/: CMakeLists.txt  package.xml
gps_navigation/: CMakeLists.txt  package.xml
gps_navigation/launch/: hebi_robot.launch
gps_navigation/src/: gps_gui.py  gps_user_input.py  gps_user_location.py  tile.py
gps_navigation/srv/: GetSamples.srv
pxrf/: CMakeLists.txt  README.md  package.xml
pxrf/launch/: fake_pxrf.launch  pxrf.launch
pxrf/msg/: CompletedScanData.msg
pxrf/scripts/: plot.py  plot_gps.py  pxrf_gui.py  pxrf_handler.py
pxrf/scripts/deprecated/: chemistry_parser.py
pxrf/scripts/fake_pxrf/: dailyFakeScansMade.txt  fakeSoilConcentrationRanges.txt  fake_chemistry.csv  fake_pxrf_data.py  fake_pxrf_handler.py  numFakeScansMade.txt
pxrf/scripts/mock_pxrf/: fake_pxrf_response.srv  mock_chemistry.csv  mock_pxrf_data.py  mock_soil_concentration_ranges.txt
pxrf/scripts/mock_pxrf_data/: mock_pxrf_data.py  mock_soil_concentration_ranges.txt  total_mock_scans_made.txt
pxrf/src/: main.cpp  vantacommunicator.cpp  vantacommunicator.h
pxrf/srv/: GetPxrf.srv
rake_scan/: CMakeLists.txt  package.xml
robo_nav/: CMakeLists.txt  hebi_viz.rviz  package.xml
robomech_nav/: .navigation_interface.py.swn  .navigation_interface.py.swo  CMakeLists.txt  _UTM  base_local_planner_params.yaml  costmap_common_params.yaml  desktop.ini  global_costmap_params.yaml  hebi_viz.rviz  local_costmap_params.yaml  move_base.launch  navigation_interface.py  odom_broadcaster.py  origin_broadcast.py  package.xml  pat_viz.rviz  test1.py  utm_to_odom_tf_broadcaster.py  utm_to_odom_tf_broadcaster_average.py  utm_to_odom_tf_broadcaster_average2.py
scripts/: patrick_alias.zsh  patrick_commands.zsh
(+196 files in other folders)
